Improved the schema resources
